--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "globals": "^15.11.0",
     "highcharts": "^12.0.1",
     "highcharts-react-official": "^3.2.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.14.0",
