animated chart no bugs

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hono": "^4.5.10"
   },
   "devDependencies": {
+    "@2or3godzillas/fp-try": "npm:@jsr/2or3godzillas__fp-try@^1.2.0",
     "@eslint/js": "^9.13.0",
     "@swc/cli": "^0.4.1-nightly.20240914",
     "@swc/core": "^1.7.36",
