--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:server": "swc server.ts -o server.js",
     "build:docker": "pnpm run build && docker build -t runesmith .",
     "preview": "vite preview",
-    "start": "node server.js",
-    "ios": "pnpm run build && pnpm start"
+    "serve": "node server.js",
+    "start": "pnpm run build && pnpm run serve"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.2",
@@ -20,6 +20,7 @@
     "@eslint/js": "^9.13.0",
     "@swc/cli": "^0.4.1-nightly.20240914",
     "@swc/core": "^1.7.36",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/d3": "^7.4.3",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.11.17",
